--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 # 配置端口
 server:
-  port: 8082
+  ip: localhost
+  port: 8080
+spring:
+  cache:
+    type: caffeine
+    cache-names: transactions
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=60s
